Fully working vue 01

--- a/01 - JavaScript Drum Kit/style_mine.css
+++ b/01 - JavaScript Drum Kit/style_mine.css
@@ -36,10 +36,6 @@ html{
 kbd {
   display: block;
   font-size: 4rem;
-  -webkit-user-select: none; /* Safari */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* IE10+/Edge */
-  user-select: none; /* Standard */
 }
 
 .sound {
@@ -47,6 +43,9 @@ kbd {
   text-transform: uppercase;
   letter-spacing: .1rem;
   color: #ffc600;
+}
+
+.noselect {
   -webkit-user-select: none; /* Safari */
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* IE10+/Edge */
